# vmware-fusion-py

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: pylint.yml  python-publish.yml
tests/: test.py
vmware_fusion_py/: __init__.py  vmcli.py  vmrest.py  vmware.py
