[project]
name = "vmware-fusion-py"
version = "1.1.0"
description = "A Python library for interacting with the VMWare Fusion CLI"
authors = [{ name = "Ahmet Mutlugun", email = "ahmet.mutlugun@gmail.com" }]
readme = "README.md"
keywords = [
    "vmware",
    "fusion",
    "interface",
    "python",
    "vmware fusion",
    "MacOS",
    "library",
    "virtualization",
]
# classifiers = []

[project.urls]
Homepage = "https://github.com/ahmetmutlugun/vmware-fusion-py"
Repository = "https://github.com/ahmetmutlugun/vmware-fusion-py"
# Add documentation

dependencies = [
    "requests>=2.28",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
